--- a/src/main/resources/templates/classup_list.html
+++ b/src/main/resources/templates/classup_list.html
@@ -14,6 +14,7 @@
         <span th:text="${classup.memberCount}"></span>
     </li>
 </ul>
-<a th:href="@{/classup/post}">Post New Classup</a>
+<!-- TODO : 네비게이션 바 구현 -->
+<a th:href="@{/classup/post}">Post New Class</a>
 </body>
 </html>
