--- a/src/main/resources/templates/studyroom_list.html
+++ b/src/main/resources/templates/studyroom_list.html
@@ -8,7 +8,8 @@
 <h1>스터디룸 일별 목록</h1>
 <ul>
     <li th:each="day : ${days}">
-        <a th:href="@{/studyroom/{title}/{day}(title=${title}, day=${day})}" th:text="${day} + '일차'">1일차</a>
+        <a th:href="@{/studyroom/{title}/{day}(title=${title}, day=${day})}"
+           th:text="${day + '일차'}">Day Link</a>
     </li>
 </ul>
 </body>
